Solved alignment issue

--- a/style.css
+++ b/style.css
@@ -2,30 +2,45 @@ body{
     display: flex;
     flex-direction: column;
 }
+.up{
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .header{
     background-color: #1F2937;
     color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    width: 1500px;
 }
 .Left{
     font-weight: bold;
 }
 .Right_links{
     display:flex;
-    justify-content: space-between;
+    gap:20px;
 }
 .top-body{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #1F2937;
     color: white;
+    padding: 50px;
+    width: 1500px;
 }
 .Hero-text{
     font-size: 48px;
     font-weight: 900;
+    width: 400px;
+}
+.subtext{
+    font-size: 18px;
+    width: 400px;
+    color: #E5E7EB;
 }
 .signup{
     margin-top: 12px;
@@ -38,7 +53,6 @@ body{
     cursor: pointer;
 }
 li{
-    padding:20px;
     list-style-type: none;
     text-decoration: none;
 }
